--- a/ReadMe
+++ b/ReadMe
@@ -1,1 +1,1 @@
-This can be run using qt program.This is made basically to help out the ones reading the code to have a better understanding of the code.The program consists of GraphicCode.cpp which gives instructions and UI part ddrawing the instructions.
+This can be run using qt program.This is made basically to help out the ones reading the code to have a better understanding of the code.The program consists of GraphicCode.cpp which gives instructions and UI part drawing the instructions.
